Fix topic info button style on ie

--- a/src/components/TopicMenu/TopicMenu.scss
+++ b/src/components/TopicMenu/TopicMenu.scss
@@ -4,16 +4,15 @@
   border-top-width: 0;
 
   .wkp-topic-menu-item-wrapper {
-    padding-bottom: 2px;
     display: flex;
     align-items: center;
+    height: 30px;
 
     .wkp-topic-menu-item {
-      height: 30px;
       width: 100%;
+      height: 100%;
       display: flex;
       align-items: center;
-      padding-right: 5px;
 
       .wkp-topic-title {
         display: flex;
@@ -57,12 +56,15 @@
     .wkp-topic-icons {
       display: flex;
       align-items: center;
-      margin-top: 4px;
+      height: 100%;
       width: auto;
+      min-width: 14px;
+      justify-content: flex-end;
     }
 
     .wkp-lock-icon {
       cursor: pointer;
+      margin-right: 4px;
       color: #888;
 
       &.wkp-active {
@@ -74,7 +76,7 @@
       display: flex;
       align-items: center;
       color: #888;
-      margin-left: 4px;
+      font-size: 14px;
 
       &.wkp-active {
         color: #000;
@@ -88,14 +90,13 @@
 
   .wkp-layer-tree {
     overflow: hidden;
-    margin: 0 0 0 20px;
+    margin: 2px 0 0 20px;
 
     .rs-layer-tree {
       overflow: hidden;
     }
 
     .wkp-info-layer-bt {
-      top: 0;
       height: 14px;
       width: 14px;
       margin-right: 0;
